@@ -23,6 +23,9 @@ lintian (2.5.37) UNRELEASED; urgency=medium
     + [BR] Support tag renaming. Warn about renamed
       tags.
 
+  * t/scripts/01-critic/runner.pl:
+    + [AB] Fix FTBFS in perlcritic runner with Test::Perl::Critic 1.03
+
  -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Sat, 15 Aug 2015 23:49:50 +0200
 
 lintian (2.5.36.1) unstable; urgency=medium
